# remeet

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  rust-toolchain.toml  setup.sh
.cargo/: config.toml
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: gen_icons.py
app/src-tauri/src/: call_detect.rs  commands.rs  lib.rs  main.rs  settings.rs  spaces.rs  store.rs  whisper_cli.rs
app/ui/: app.js  index.html  package.json  styles.css  tsconfig.json  vite.config.ts
app/ui/src/: main.tsx  styles.css
app/ui/src/components/: Player.tsx  RecordingList.tsx  RecordingRow.tsx  RenameGlyph.tsx  RevealGlyph.tsx  SpacePicker.tsx  SummaryBody.tsx  TranscriptBody.tsx
app/ui/src/lib/: api.ts  format.ts  useAppInfo.ts  useAudioPlayer.ts  useCallReminder.ts  useRecorder.ts  useRecordings.ts  useSpaces.ts  useSummary.ts  useTranscript.ts
app/ui/src/main-window/: MainApp.tsx  SettingsPane.tsx  SpacesBrowser.tsx  window.css
app/ui/src/popover/: PopoverApp.tsx
crates/remeet-aec/: Cargo.toml
crates/remeet-aec/src/: lib.rs
crates/remeet-ai/: Cargo.toml
crates/remeet-ai/src/: claude.rs  codex.rs  error.rs  gemini.rs  http.rs  lib.rs  openai.rs  summary.rs
crates/remeet-audio/: Cargo.toml
crates/remeet-audio/examples/: spike_vpio_sync.rs  vpio_mic.rs
crates/remeet-audio/src/: activity.rs  capture.rs  error.rs  frame.rs  lib.rs  sink.rs
crates/remeet-session/: Cargo.toml
crates/remeet-session/examples/: record.rs  record_system_only.rs
crates/remeet-session/src/: aec_pass.rs  error.rs  lib.rs  mixdown.rs  recorder.rs  transcript.rs
crates/remeet-todo/: Cargo.toml
crates/remeet-todo/src/: claude.rs  error.rs  lib.rs
crates/remeet-transcribe/: Cargo.toml
crates/remeet-transcribe/src/: audio.rs  denoise.rs  error.rs  isolate.rs  lib.rs
scripts/: bump-version.sh  update-app.sh
spikes/dual-capture/: Cargo.toml
spikes/dual-capture/src/: main.rs
spikes/session/: Cargo.toml
spikes/session/src/: main.rs
spikes/todo/: Cargo.toml
spikes/todo/src/: main.rs
spikes/transcribe/: Cargo.toml
spikes/transcribe/src/: main.rs
