[workspace]
resolver = "3"
members = [
    "crates/remeet-audio",
    "crates/remeet-transcribe",
    "crates/remeet-ai",
    "crates/remeet-todo",
    "crates/remeet-session",
    "app/src-tauri",
    "spikes/dual-capture",
    "spikes/transcribe",
    "spikes/todo",
    "spikes/session",
]

[workspace.package]
edition = "2024"
rust-version = "1.97"
license = "MIT"

[workspace.dependencies]
remeet-audio = { path = "crates/remeet-audio" }
remeet-transcribe = { path = "crates/remeet-transcribe" }
remeet-ai = { path = "crates/remeet-ai" }
remeet-todo = { path = "crates/remeet-todo" }
remeet-session = { path = "crates/remeet-session" }

anyhow = "1"
crossbeam-channel = "0.5"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

# Whisper transcription. `metal` compiles whisper.cpp with the Metal backend, so
# inference runs on the M-series GPU. whisper.cpp is vendored and built by the
# crate — cmake (present) is the only external requirement.
whisper-rs = { version = "0.16", default-features = false, features = ["metal"] }

# Sample-rate conversion. Pinned to the 0.16 line rather than 4.0: 4.0 routes all
# I/O through the new `audioadapter` traits, whereas 0.16 takes plain `Vec<Vec<f32>>`,
# which is all this needs. 48 kHz capture -> 16 kHz mono for Whisper.
rubato = "0.16"

# ScreenCaptureKit bindings.
#
# cidre rather than the `screencapturekit` crate: the latter pulls in `apple-metal`,
# whose Swift bridge needs the macOS 26 SDK, which needs Xcode 26, which needs
# macOS Tahoe. cidre binds Objective-C directly — no Swift bridge, no SDK floor
# beyond what the features below declare.
#
# `sc` pulls the ScreenCaptureKit surface; `macos_15_0` gates set_capture_mic, which
# is what lets one stream emit both tracks; `async` turns the completion-handler
# APIs (start/stop/current) into awaitable ones.
cidre = { version = "0.16", default-features = false, features = [
    "sc",
    "macos_15_0",
    "async",
] }

[profile.release]
lto = "thin"
