[package]
name = "remeet-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "remeet_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
remeet-ai.workspace = true
remeet-audio.workspace = true
remeet-session.workspace = true
remeet-transcribe.workspace = true

tauri = { version = "2", features = [
  "tray-icon",
  "image-png",
  "macos-private-api",
  "protocol-asset",
] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
