[package]
name = "remeet-transcribe"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
whisper-rs.workspace = true
rubato.workspace = true
thiserror.workspace = true
# Pure-Rust RNNoise for microphone background-noise suppression (no native dependency).
nnnoiseless = { version = "0.5", default-features = false }

